--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
     <body> 
         <header>
             <h1>HTML5</h1>
+            <p>Lidt ekstra text</p>
         </header>
 
         <main>
